resize static home imgs

--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -359,7 +359,7 @@
                     <a href="#">
                         <!-- Image -->                        
                         <figure>                            
-                            <img src="/static/Images/IMG_2040.JPG" alt="Alternative Text" class="img-responsive">
+                            <img src="/static/Images/IMG_102.JPG" alt="Alternative Text" class="img-responsive">
                         </figure>
                         <div class="ws-works-caption text-center">
                             <!-- Item Category -->
@@ -381,7 +381,7 @@
                     <a href="#">
                         <!-- Image -->                        
                         <figure>                            
-                            <img src="/static/Images/IMG_2045.JPG" alt="Alternative Text" class="img-responsive">                
+                            <img src="/static/Images/IMG_103.JPG" alt="Alternative Text" class="img-responsive">                
                         </figure>
                         <div class="ws-works-caption text-center">
                             <!-- Item Category -->
@@ -403,7 +403,7 @@
                     <a href="#">
                         <!-- Image -->                        
                         <figure>                            
-                            <img src="/static/Images/IMG_2042.JPG" alt="Alternative Text" class="img-responsive">
+                            <img src="/static/Images/IMG_104.JPG" alt="Alternative Text" class="img-responsive">
                         </figure>
                         <div class="ws-works-caption text-center">
                             <!-- Item Category -->
@@ -425,7 +425,7 @@
                     <a href="#">
                         <!-- Image -->                        
                         <figure>                            
-                            <img src="/static/Images/IMG_2047.JPG" alt="Alternative Text" class="img-responsive">
+                            <img src="/static/Images/105.JPG" alt="Alternative Text" class="img-responsive">
                         </figure>
                         <div class="ws-works-caption text-center">
                             <!-- Item Category -->
@@ -448,7 +448,7 @@
                         <div class="ws-item-offer">
                             <!-- Image -->                        
                             <figure>                            
-                                <img src="/static/Images/IMG_2050.JPG" alt="Alternative Text" class="img-responsive">
+                                <img src="/static/Images/IMG_106.JPG" alt="Alternative Text" class="img-responsive">
                             </figure>
                             <!-- Sale Caption -->
                             <div class="ws-item-sale">
@@ -471,13 +471,14 @@
                     </a>
                 </div>                                                                       
 
+ 
                 <!-- Item -->
                 <div class="col-sm-6 col-md-4 ws-works-item" data-sr='wait 0.1s, ease-in 20px'>
                     <a href="#">
                         <div class="ws-item-offer">
                             <!-- Image -->                        
                             <figure>                            
-                                <img src="static/assets/img/works/illustrated/3.jpg" alt="Alternative Text" class="img-responsive">
+                                <img src="/static/Images/IMG_106.JPG" alt="Alternative Text" class="img-responsive">
                             </figure>
                             <!-- Sale Caption -->
                             <div class="ws-item-sale">
@@ -546,6 +547,7 @@
             </div>
         </div>
     </section>
+     
     <!-- Work Collection End  -->
 
     <!-- Call to Action Section -->
