--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
     <div class="ws-topbar">
         <div class="pull-left">
             <div class="ws-topbar-message hidden-xs">
-                <p>Free Shipping on orders over <span>50$ in USA</span></p> 
+                <p>Free Shipping on orders over <span>€50 in Ireland & UK</span></p> 
             </div>
         </div>
 
