--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1410,7 +1410,8 @@ tfoot.ws-checkout-shipping tr.ws-shipping-total td{
 .ws-call-section {
 	position: relative;
 	min-height: 350px;
-	background: url(../img/backgrounds/shop-header-bg.jpg) no-repeat; 
+	
+	/*background: url(../img/backgrounds/shop-header-bg.jpg) no-repeat; */
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
