--- a/templates/base.html
+++ b/templates/base.html
@@ -186,23 +186,23 @@
                        <!-- <img src="/static/assets/img/logo-white.png" alt="Alternative Text" class="img-responsive">-->
                    <!-- </a>-->
                 </div>
-               
+        
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
                         <li class="dropdown">
-                            <a href="{% url 'gallery' %}" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-animations="fadeIn">Home <span class="caret"></span></a>
+                            <a href="/" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-animations="fadeIn">Home <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="index.html">Parallax Image</a></li>                                
-                                <li><a href="slider-fullwidth.html">Slider FullWidth</a></li>
+                                <li><a href="/">Home</a></li>                                
+                                <!--<li><a href="slider-fullwidth.html">Slider FullWidth</a></li>
                                 <li><a href="slider-fullscreen.html">Slider FullScreen</a></li>
-                                <li><a href="3d-parallax.html">3D Parallax Hero</a></li>                                                          
+                                <li><a href="3d-parallax.html">3D Parallax Hero</a></li>  -->                                                        
                             </ul>
                         </li>
                         <li><a href="{% url 'blog' %}">Blog</a></li>
                         <li class="dropdown">
                             <a href="{% url 'gallery' %}" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-animations="fadeIn">Shop <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'gallery' %}">Default Shop Page</a></li>
+                                <li><a href="{% url 'gallery' %}">Print Store</a></li>
                                 <li><a href="single-product.html">Single Product</a></li>
                                 <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
                                 <li><a href="{% url 'register' %}">My Account / Register</a></li>
