--- a/Accounts/templates/profile.html
+++ b/Accounts/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
-{% load staticfiles %}
+{% load static from staticfiles %}
 
 {% block head_js %}
     <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
@@ -13,8 +13,27 @@
 {% endblock %}
 
 {% block content %}
+
+<!-- Page Parallax Header -->
+<div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+        <div class="ws-overlay">            
+            <div class="ws-parallax-caption">                
+                <div class="ws-parallax-holder">
+                    <h1>Login</h1>                        
+                </div>
+            </div>
+        </div>            
+    </div>            
+    <!-- End Page Parallax Header -->
+
+<div class="padding-top-x70"></div>
+    
+ <div class="message" width="100%" text-align="center">   
     <h2>Success!</h2>
     <p>You are logged in as {{ user.email }} </p>
+ </div>
+
+<div class="padding-bottom-x70"></div>
    
 
 
