--- a/Accounts/templates/register.html
+++ b/Accounts/templates/register.html
@@ -2,6 +2,18 @@
 {% load bootstrap_tags %}
 {% block content %}
 
+<!-- Page Parallax Header -->
+<div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+        <div class="ws-overlay">            
+            <div class="ws-parallax-caption">                
+                <div class="ws-parallax-holder">
+                    <h1>Product Details</h1>                        
+                </div>
+            </div>
+        </div>            
+    </div>            
+    <!-- End Page Parallax Header -->
+
 <div id="container">
     <form role="form" method="post" action="{% url 'register' %}">
         <legend>Create a new account</legend>
