--- a/Accounts/templates/subscribe.html
+++ b/Accounts/templates/subscribe.html
@@ -13,6 +13,19 @@
 {% endblock %}
 
 {% block content %}
+
+<!-- Page Parallax Header -->
+<div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+        <div class="ws-overlay">            
+            <div class="ws-parallax-caption">                
+                <div class="ws-parallax-holder">
+                    <h1>Product Details</h1>                        
+                </div>
+            </div>
+        </div>            
+    </div>            
+    <!-- End Page Parallax Header -->
+    
     <form id="payment-form" role="form" method="post" action="{% url 'subscribe' %}">
         <legend>Subscribe</legend>
         {% csrf_token %}
