--- a/Cart/templates/empty_cart.html
+++ b/Cart/templates/empty_cart.html
@@ -1,6 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+<!-- Page Parallax Header -->
+   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+        <div class="ws-overlay">            
+            <div class="ws-parallax-caption">                
+                <div class="ws-parallax-holder">
+                    <h1>Cart</h1>                        
+                </div>
+            </div>
+        </div>            
+    </div>            
+    <!-- End Page Parallax Header -->
     <div>You have no items in your cart.</div>
     <div><a href="{% url 'gallery' %}">Go shop</a></div>
 {% endblock %}
