--- a/Gallery/templates/gallery.html
+++ b/Gallery/templates/gallery.html
@@ -23,7 +23,7 @@
     <!-- End Loader Start -->
 
     <!-- Page Parallax Header -->
-    <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="{% static 'images/rosegarden.jpg' %}"  display="block" width="100%" height="70%">   
+    <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="70%">   
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
@@ -40,11 +40,7 @@
             <div class="ws-shop-page">                
                 <!-- Categories Nav -->           
                 <ul class="nav nav-tabs" role="tablist">
-                    <li role="presentation" class="active"><a href="#all" aria-controls="all" role="tab" data-toggle="tab">All</a></li>
-                    <li role="presentation"><a href="#roses" aria-controls="prints" role="tab" data-toggle="tab">Roses</a></li>
-                    <li role="presentation"><a href="#summer" aria-controls="illustrated" role="tab" data-toggle="tab">Summer</a></li>
-                    <li role="presentation"><a href="#spring" aria-controls="journals" role="tab" data-toggle="tab">Spring</a></li>
-                    <li role="presentation"><a href="#sale" aria-controls="sale" role="tab" data-toggle="tab">Flowers</a></li>                    
+                    <li>Click on an Image for Prices and Options</li>                    
                 </ul>
                 
                 <!-- Categories Content --> 
@@ -75,8 +71,8 @@
 
                                     <div class="ws-item-separator"></div>    
 
-                                    <!-- Price -->
-                                    <div class="ws-item-price"><del>$50.00</del> <ins>$25.00</ins></div>                                                    
+                                    {% comment %}<!-- Price -->
+                                    <div class="ws-item-price"><del>$50.00</del> <ins>$25.00</ins></div>{% endcomment %}                                                    
                                 
                                 </div>
                            </a>
