--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -3,21 +3,18 @@
 
 {% block content %}
 
-    <!-- Page Parallax Header -->
-    <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg' %}" display="block" width="100%" height="50%">       
-            <div class="ws-overlay">            
-                <div class="ws-parallax-caption">                
-                    <div class="ws-parallax-holder">
-                        <h1>Mailo's Blog</h1>                        
-                    </div>
+<!-- Page Parallax Header -->
+<div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+        <div class="ws-overlay">            
+            <div class="ws-parallax-caption">                
+                <div class="ws-parallax-holder">
+                    <h1>Mailo's Blog</h1>                        
                 </div>
-            </div>            
+            </div>
         </div>            
-        <!-- End Page Parallax Header -->
-
+    </div>            
+    <!-- End Page Parallax Header -->
     
-
-               
 
 
  
@@ -35,7 +32,7 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:50 }}</p>
                         <p><button class="btn btn-default" onclick="location.href='{% url 'view_post' post.id %}'">Read More</button>
-                        <button class="btn btn-default" onclick="location.href='{% url 'new_post' %}'">New Post</button></p>
+                         <button class="btn btn-default" onclick="location.href='{% url 'new_post' %}'">New Post</button></p>
                         <P>{{ post.published_date }} | <strong>Views</strong> {{ post.views }} | <strong>Tag</strong> {{ post.tag }}</p>
                         
                     </div>
