change literal urls

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,26 +13,26 @@
 
 
         <!-- Jquery -->
-        <script src="/static/assets/js/plugins/jquery-1.11.3.min.js"></script> 
+        <script src="{% static 'assets/js/plugins/jquery-1.11.3.min.js'%}"></script> 
  
          <!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="/static/assets/img/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico'%}">
 
         <!-- CSS Styles -->
-        <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">          
-        <link rel="stylesheet" href="/static/assets/css/main.css">  
+        <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css'%}">          
+        <link rel="stylesheet" href="{% static 'assets/css/main.css'%}">  
 
         <!-- Animate CSS -->
-        <link rel="stylesheet" href="/static/assets/css/animate.min.css">  
+        <link rel="stylesheet" href="{% static 'assets/css/animate.min.css'%}">  
 
         <!-- Revolution Slider -->
-        <link rel="stylesheet" href="/static/assets/js/plugins/revolution/css/settings.css">        
-        <link rel="stylesheet" href="/static/assets/js/plugins/revolution/css/layers.css">                
-        <link rel="stylesheet" href="/static/assets/js/plugins/revolution/css/navigation.css">   
+        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/settings.css'%}">        
+        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/layers.css'%}">                
+        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/navigation.css'%}">   
 
         <!-- Owl Carousel -->
-        <script type="text/javascript" src="/static/assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
-        <link rel="stylesheet" href="/static/assets/js/plugins/owl-carousel/owl.carousel.css">         
+        <script type="text/javascript" src="{% static 'assets/js/plugins/owl-carousel/owl.carousel.min.js'%}"></script>
+        <link rel="stylesheet" href="{% static 'assets/js/plugins/owl-carousel/owl.carousel.css'%}">         
 
         <!-- Google Web Fonts -->           
         <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,700,900' rel='stylesheet' type='text/css'>
@@ -42,21 +42,21 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
         <!-- Slider Revolution -->
-        <script src="/static/assets/js/plugins/revolution/js/jquery.themepunch.tools.min.js"></script>
-        <script src="/static/assets/js/plugins/revolution/js/jquery.themepunch.revolution.min.js"></script>  
+        <script src="{% static 'assets/js/plugins/revolution/js/jquery.themepunch.tools.min.js'%}"></script>
+        <script src="{% static 'assets/js/plugins/revolution/js/jquery.themepunch.revolution.min.js'%}"></script>  
 
         <!-- Slider Revolution 5.0 Extensions  
             (Load Extensions only on Local File Systems !  
             The following part can be removed on Server for On Demand Loading) -->  
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-        <script type="text/javascript" src="/static/assets/js/plugins/revolution/js/extensions/revolution.extension.video.min.js"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.actions.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.carousel.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.kenburn.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.layeranimation.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.migration.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.navigation.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.parallax.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.slideanims.min.js'%}"></script>
+        <script type="text/javascript" src="{% static 'assets/js/plugins/revolution/js/extensions/revolution.extension.video.min.js'%}"></script>
    
 
     {% block head_js %}{% endblock %}
@@ -304,13 +304,13 @@
 
      <!-- Scripts -->   
 
-    <script src="/static/assets/js/plugins/bootstrap.min.js"></script>     
-    <script src="/static/assets/js/plugins/modernizr-2.8.3-respond-1.4.2.min.js"></script>            
-    <script src="/static/assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
-    <script src="/static/assets/js/plugins/parallax.min.js"></script>    
-    <script src="/static/assets/js/plugins/scrollReveal.min.js"></script>
-    <script src="/static/assets/js/plugins/bootstrap-dropdownhover.min.js"></script>
-    <script src="/static/assets/js/main.js"></script>
+    <script src="{% static 'assets/js/plugins/bootstrap.min.js"></script>     
+    <script src="{% static 'assets/js/plugins/modernizr-2.8.3-respond-1.4.2.min.js"></script>            
+    <script src="{% static 'assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
+    <script src="{% static 'assets/js/plugins/parallax.min.js"></script>    
+    <script src="{% static 'assets/js/plugins/scrollReveal.min.js"></script>
+    <script src="{% static 'assets/js/plugins/bootstrap-dropdownhover.min.js"></script>
+    <script src="{% static 'assets/js/main.js"></script>
     
     
 
