--- a/templates/base.html
+++ b/templates/base.html
@@ -19,16 +19,16 @@
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico'%}">
 
         <!-- CSS Styles -->
-        <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css'%}">          
-        <link rel="stylesheet" href="{% static 'assets/css/main.css'%}">  
+        <link rel="stylesheet" href="{% staticfiles 'assets/css/bootstrap.min.css'%}">          
+        <link rel="stylesheet" href="{% staticfiles 'assets/css/main.css'%}">  
 
         <!-- Animate CSS -->
-        <link rel="stylesheet" href="{% static 'assets/css/animate.min.css'%}">  
+        <link rel="stylesheet" href="{% staticfiles 'assets/css/animate.min.css'%}">  
 
         <!-- Revolution Slider -->
-        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/settings.css'%}">        
-        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/layers.css'%}">                
-        <link rel="stylesheet" href="{% static 'assets/js/plugins/revolution/css/navigation.css'%}">   
+        <link rel="stylesheet" href="{% staticfiles 'assets/js/plugins/revolution/css/settings.css'%}">        
+        <link rel="stylesheet" href="{% staticfiles 'assets/js/plugins/revolution/css/layers.css'%}">                
+        <link rel="stylesheet" href="{% staticfiles 'assets/js/plugins/revolution/css/navigation.css'%}">   
 
         <!-- Owl Carousel -->
         <script type="text/javascript" src="{% static 'assets/js/plugins/owl-carousel/owl.carousel.min.js'%}"></script>
