--- a/templates/base.html
+++ b/templates/base.html
@@ -304,13 +304,13 @@
 
      <!-- Scripts -->   
 
-    <script src="/static/assets/js/plugins/bootstrap.min.js"></script>     
-    <script src="/static/assets/js/plugins/modernizr-2.8.3-respond-1.4.2.min.js"></script>            
-    <script src="/static/assets/js/plugins/owl-carousel/owl.carousel.min.js"></script>
-    <script src="/static/assets/js/plugins/parallax.min.js"></script>    
-    <script src="/static/assets/js/plugins/scrollReveal.min.js"></script>
-    <script src="/static/assets/js/plugins/bootstrap-dropdownhover.min.js"></script>
-    <script src="/static/assets/js/main.js"></script>
+    <script src="{% static '/static/assets/js/plugins/bootstrap.min.js'%}"></script>     
+    <script src="{% static '/static/assets/js/plugins/modernizr-2.8.3-respond-1.4.2.min.js'%}"></script>            
+    <script src="{% static '/static/assets/js/plugins/owl-carousel/owl.carousel.min.js'%}"></script>
+    <script src="{% static '/static/assets/js/plugins/parallax.min.js'%}"></script>    
+    <script src="{% static '/static/assets/js/plugins/scrollReveal.min.js'%}"></script>
+    <script src="{% static '/static/assets/js/plugins/bootstrap-dropdownhover.min.js'%}"></script>
+    <script src="{% static '/static/assets/js/main.js'%}"></script>
     
     
 
