--- a/Gallery/templates/gallery.html
+++ b/Gallery/templates/gallery.html
@@ -23,7 +23,7 @@
     <!-- End Loader Start -->
 
     <!-- Page Parallax Header -->
-    <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="70%">   
+    <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src={% static 'images/rosegarden.jpg'%}"  display="block" width="100%" height="70%">   
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
