--- a/blog/templates/blogpostform.html
+++ b/blog/templates/blogpostform.html
@@ -4,7 +4,7 @@
 
 
 <!-- Page Parallax Header -->
-   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">        
+   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src={% static 'images/rosegarden.jpg'%}"  display="block" width="100%" height="50%">        
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
