--- a/Home/templates/index.html
+++ b/Home/templates/index.html
@@ -31,7 +31,7 @@
         <ul>   
             <li data-transition="fade" data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="2000">        
                 <!-- Background Image -->
-                <img src={% static 'images/rosegarden.jpg'%}" alt="Alternative Text" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10"> 
+                <img src="{% static 'images/rosegarden.jpg'%}" alt="Alternative Text" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10"> 
 
                 <!-- Background Overlay -->
                 <div class="tp-caption"  
