--- a/Cart/templates/cart.html
+++ b/Cart/templates/cart.html
@@ -15,7 +15,7 @@
 {% block content %}
 
 <!-- Page Parallax Header -->
-   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="/static/images/rosegarden.jpg"  display="block" width="100%" height="50%">       
+   <div class="ws-parallax-header parallax-window"  data-parallax="position:fixed">   <img src="{% static 'Images/rosegarden.jpg'%}"  display="block" width="100%" height="50%">       
         <div class="ws-overlay">            
             <div class="ws-parallax-caption">                
                 <div class="ws-parallax-holder">
