--- a/Cart/templates/cart.html
+++ b/Cart/templates/cart.html
@@ -76,23 +76,25 @@
     <hr>
 
 
-    <div id="payment-container">
+   {% comment %} <div id="payment-container">{% endcomment %}
         <form role="form" method="post" id="payment-form" action="{% url 'cart' %}">
-            <fieldset>
-                <legend>Pay Now</legend>
+            {% comment %}<fieldset>{% endcomment %}
+                
                     <div id="credit-card-errors" style="display:none">
                         <div class="alert-message block-message error" id="stripe-error-message"></div>
                     </div>      
+
+                    <legend>Pay Now</legend>
 
                     {% csrf_token %}
                     {{ form | as_bootstrap_horizontal }}
                     <div class="form-group">
                         <input class="btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
-                        <button type="submit">Pay</button>
+                        {% comment %}<button type="submit">Pay</button>{% endcomment %}
                     </div>
-            </fieldset>
+           {% comment %} </fieldset>{% endcomment %}
         </form>
-    </div>
+    {% comment %}</div>{% endcomment %}
 </div>
 
 {% endblock %}
